<resources>
    <string name="app_name">小V咖</string>
    <string name="loading">加载中</string>
    <string name="login_phone">手机号</string>
    <string name="login_password">验证码</string>
    <string name="login_code">获取验证码</string>
    <string name="login_text">未注册过的手机号将自动注册为小V咖用户</string>
    <string name="login">登录</string>
    <string name="main_home">分红</string>
    <string name="main_community">圈子</string>
    <string name="main_income">收益</string>
    <string name="main_my">我的</string>
    <string name="home_text1">进行中的红包总额（元）</string>
    <string name="home_text2">热门圈子</string>
    <string name="home_text3">全部圈子 ></string>
    <string name="task_list_text">暂无记录</string>
    <string name="all_circle_title">全部圈子</string>
    <string name="my_text1">成为小V</string>
    <string name="my_text2">销售分红</string>
    <string name="my_text3">我的影响力</string>
    <string name="my_text4">流量分红</string>
    <string name="my_text5">好友分红</string>
    <string name="my_text6">身份认证</string>
    <string name="my_text7">设置</string>
    <string name="my_text8">编辑资料</string>
    <string name="approve_title">认证小V咖</string>
    <string name="approve_btn">下一步</string>
    <string name="approve_text1">社交账号</string>
    <string name="approve_text2">实名认证</string>
    <string name="approve_text3">身份认证</string>
    <string name="account_text">(微信及微博必选)</string>
    <string name="account_text1">微信</string>
    <string name="account_text2">微博</string>
    <string name="account_text3">QQ</string>
    <string name="account_text4">公众号</string>
    <string name="account_text5">豆瓣</string>
    <string name="account_text6">知乎</string>
    <string name="account_text7">百度</string>
    <string name="account_text8">淘宝</string>
    <string name="account_text9">京东</string>
    <string name="account_text10">天涯</string>
    <string name="account_text11">斗鱼</string>
    <string name="account_text12">美拍</string>
    <string name="account_text13">映客</string>
    <string name="account_text14">秒拍</string>
    <string name="account_text15">快手</string>
    <string name="account_text16">花椒</string>
    <string name="account_text17">陌陌</string>
    <string name="account_text18">NICE</string>
    <string name="account_text19">小红书</string>
    <string name="account_text20">领英</string>
    <string name="bind_account_text1">点击绑定</string>
    <string name="bind_account_text2">上传审核信息</string>
    <string name="bind_account_text3">请将您授权的账号截图上传审核，截图示例如下：</string>
    <string name="bind_account_text4">提交审核</string>
    <string name="bind_account_text5">截图示例</string>
    <string name="card_text1">完成认证可获得</string>
    <string name="card_text2">200</string>
    <string name="card_text3">金币，一次认证，永久收益。</string>
    <string name="card_text4">真实姓名</string>
    <string name="card_text5">身份证号</string>
    <string name="card_text6">所在地区</string>
    <string name="card_text7">我已阅读并同意</string>
    <string name="card_text8">《小V咖用户隐私信息保密协议》</string>
    <string name="card_text9">* 上述信息提交后不可修改 *</string>
    <string name="influence_title">我的影响力</string>
    <string name="influence_top">社交影响力</string>
    <string name="influence_text1">完成社交账号绑定认证能提升影响力</string>
    <string name="influence_text2">微信好友数</string>
    <string name="influence_text3">QQ好友数</string>
    <string name="influence_text4">微博好友数</string>
    <string name="influence_text5">其它账号</string>
    <string name="influence_text6">上传手机通讯录</string>
    <string name="influence_text7">上传</string>
    <string name="influence_text8">未认证</string>
    <string name="set_title">设置</string>
    <string name="set2_title">关于小V咖</string>
    <string name="gold_title">V币商城</string>
    <string name="my_profit_title">我的分红</string>
    <string name="recharge_title">充值</string>
    <string name="extract_title">提现</string>
    <string name="extract_end_title">提现申请已提交</string>
    <string name="bind_alipay_title">绑定支付宝</string>
    <string name="circle_details_text1">人气小V</string>
    <string name="circle_details_text2">兴趣分布</string>
    <string name="circle_details_text3">关键词</string>
    <string name="flow_title">推手</string>
    <string name="h5_title">分享内容详情</string>
    <string name="all_v_title">参与小V</string>
    <string name="center_title">影响力</string>
    <string name="center_text1">我的影响力</string>
    <string name="center_text2">了解影响力</string>
    <string name="center_text3">分享文章</string>
    <string name="center_text4">邀请好友</string>
    <string name="center_text5">共享圈子</string>
    <string name="center_text6">完善资料</string>
    <string name="center_text7">小V认证</string>
    <string name="center_text8">社交账号</string>
    <string name="center_text9">高额奖金</string>
    <string name="center_text10">免费提现</string>
    <string name="center_text11">极速到账</string>
    <string name="center_text12">红V特权</string>
    <string name="center_text13">影响力变现</string>
    <string name="profile_title">编辑资料</string>
    <string name="profile_text">保存</string>
    <string name="profile_text1">头像</string>
    <string name="profile_text2">昵称</string>
    <string name="profile_text3">地区</string>
    <string name="profile_text4">兴趣</string>
    <string name="profile_text5">(至少选择2个)</string>
    <string name="profile_text6">圈子</string>
    <string name="profile_text7">添加</string>
    <string name="video_text1">分享赚:</string>
    <string name="video_text2">分享赚</string>
    <string name="video_text3">原创</string>
    <string name="video_text4">重播</string>
    <string name="v_title">小V资料</string>
    <string name="show_title">今日V咖</string>
    <string name="show_text1">朋友圈点击报价</string>
    <string name="show_text2">个人标签</string>
    <string name="show_text3">TA的相册</string>
    <string name="show_text4">约播TA</string>
    <string name="show_text5">TA的关键词</string>
    <string name="show_text6">竞价排名</string>
    <string name="show_text7">剩余时间: </string>
    <string name="show_btn">约聊TA</string>
    <string name="invite_title">邀请好友</string>
    <string name="phone_title">绑定手机号</string>
    <string name="bind_weixin_title">微信好友数认证</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
