<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color">

    <LinearLayout
        android:id="@+id/card_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="32px">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_text1"
                android:textColor="@color/font_gray_7c"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_text2"
                android:textColor="@color/font_fa"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_text3"
                android:textColor="@color/font_gray_7c"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="96px"
            android:layout_marginTop="32px"
            android:background="@drawable/card_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24px"
                android:text="@string/card_text4"
                android:textColor="@color/font_color"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="2px"
                android:layout_height="38px"
                android:layout_marginLeft="24px"
                android:background="@color/font_gray_c" />

            <EditText
                android:id="@+id/card_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24px"
                android:layout_marginRight="24px"
                android:background="@null"
                android:hint="请输入您的真实姓名"
                android:singleLine="true"
                android:textColor="@color/font_color"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="96px"
            android:layout_marginTop="32px"
            android:background="@drawable/card_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24px"
                android:text="@string/card_text5"
                android:textColor="@color/font_color"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="2px"
                android:layout_height="38px"
                android:layout_marginLeft="24px"
                android:background="@color/font_gray_c" />

            <EditText
                android:id="@+id/card_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24px"
                android:layout_marginRight="24px"
                android:background="@null"
                android:hint="请输入您的身份证号"
                android:maxLength="18"
                android:singleLine="true"
                android:textColor="@color/font_color"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="96px"
            android:layout_marginTop="32px"
            android:background="@drawable/card_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24px"
                android:text="@string/card_text6"
                android:textColor="@color/font_color"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="2px"
                android:layout_height="38px"
                android:layout_marginLeft="24px"
                android:background="@color/font_gray_c" />

            <EditText
                android:id="@+id/card_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24px"
                android:layout_marginRight="24px"
                android:layout_weight="1"
                android:background="@null"
                android:focusable="false"
                android:hint="请选择地区"
                android:singleLine="true"
                android:textColor="@color/font_color"
                android:textSize="14sp" />


            <ImageView
                android:layout_width="16px"
                android:layout_height="wrap_content"
                android:layout_marginRight="24px"
                android:src="@mipmap/right" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32px"
            android:gravity="center"
            android:text="@string/card_text9"
            android:textColor="@color/font_gray_9"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/card_top"
        android:layout_marginTop="32px"
        android:gravity="center"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/card_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_text7"
            android:textColor="@color/font_gray_7c"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/card_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_text8"
            android:textColor="@color/colorAccent"
            android:textSize="12sp" />
    </LinearLayout>

    <Button
        android:id="@+id/card_btn"
        android:layout_width="match_parent"
        android:layout_height="96px"
        android:layout_below="@id/card_top"
        android:layout_marginLeft="32px"
        android:layout_marginRight="32px"
        android:layout_marginTop="160px"
        android:background="@drawable/login_btn"
        android:gravity="center"
        android:text="@string/bind_account_text4"
        android:textColor="@color/font_color"
        android:textSize="18sp" />
</RelativeLayout>